--- a/package.json
+++ b/package.json
@@ -1,5 +1,95 @@
 {
   "name": "ezylearning",
   "private": true,
-  "dependencies": {}
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
+  },
+  "scripts": {
+    "test": "`npm bin`/mocha --compilers js:babel-core/register --require ./client/tests/test_helper.js '*/tests/**/*.@(js|jsx)'",
+    "test:watch": "npm run test -- --watch",
+    "build": "webpack",
+    "dev": "webpack-dev-server",
+    "deploy": "NODE_ENV=production `npm bin`/webpack -p",
+    "start": "npm run dev",
+    "clean": "rm -rf client/dist client/build",
+    "setup": "npm install"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/..."
+  },
+  "keywords": [
+    "boilerplate",
+    "redux",
+    "react",
+    "webpack",
+    "sass",
+    "css modules"
+  ],
+  "engines": {
+    "node": "4.2.4",
+    "npm": "3.8.8"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "actions": "^1.3.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "components": "^0.1.0",
+    "css-loader": "^0.28.5",
+    "expect": "^1.20.2",
+    "file-loader": "^0.11.2",
+    "history": "^4.7.2",
+    "html-webpack-plugin": "^2.30.1",
+    "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
+    "node-sass": "^4.5.3",
+    "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-foundation": "^0.9.0",
+    "react-redux": "^5.0.6",
+    "react-redux-toastr": "^7.1.5",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^4.0.8",
+    "reactstrap": "^4.8.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.4.1",
+    "redux-thunk": "^2.2.0",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "svg-react-loader": "^0.4.5",
+    "webpack": "^3.5.5"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^3.4.1",
+    "chai-immutable": "^1.6.0",
+    "ajv": "^5.0.0",
+    "jsdom": "^11.2.0",
+    "mocha": "^3.5.0",
+    "npm-install-webpack-plugin": "^4.0.5",
+    "react-css-modules": "^4.7.1",
+    "react-hot-loader": "^1.3.1",
+    "redux-devtools": "^3.4.0",
+    "webpack-dev-server": "^2.7.1"
+  }
 }
