--- a/config/docker/nginx/nginx.conf
+++ b/config/docker/nginx/nginx.conf
@@ -23,7 +23,7 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
     server_name www.coursedy.com;
 
     # redirects www to non-www. wasn't work for me without this server block
