--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   solr:
     image: solr:6.6
+    volumes:
+      - ./solr:/opt/solr/server/solr
     ports:
       - '8983:8983'
 
